# astar-free

./: CMakeLists.txt  MapIncludes.cmake  README.md  astar.asm  digit_gfx.asm  game.asm  gradients.asm  i2c.inc  kernel.asm  map_loader.asm  memory.asm  pickup_colu.asm  pickup_gfx.asm  player_gfx.asm  sound.asm  splash_gfx.asm  state.asm  status_display.asm  subroutines.asm
maps/: bad.txt  end.asm  input.txt  mapX1.txt  mapX2.txt  mapX3.txt  mapX4.txt  mapX5.txt  mapX6.txt  mapX7.txt  mapX8.txt  mapXS.txt  map_base.asm  map_base.txt  title.asm
solver/: CMakeLists.txt  Makefile.win  Puzzle.cpp  Puzzle.h  README.md  Solver.cpp  State.cpp  State.h  StatePtr.cpp  readme.txt
sound/: codes.asm  groups.asm  patterns.asm  songs.asm  speech.asm
variants/NTSC/: variant.h
variants/PAL50/: variant.h
variants/PAL60/: variant.h
